phase2_Dev/src/objects/ProcessingStepResult__c.object
<CustomObject>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intake__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Intake</label>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Processing Step Results</relationshipLabel>
        <relationshipName>ProcessingStepResults</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessingStep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Processing Step</label>
        <referenceTo>ProcessingStep__c</referenceTo>
        <relationshipLabel>Processing Step Results</relationshipLabel>
        <relationshipName>Processing_Step_Results</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Processing Step Result</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProcessingStepResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processing Step Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>